# gol-website-flake

./: README.md  flake.nix  shell.nix
game-of-life/: .gitignore  Cargo.toml  default.nix
game-of-life/src/: lib.rs
www/: default.nix  index.html  index.js  styles.css
www/scripts/: shaders.js  webgl.js
