[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["xvrqt <git@xvrqt.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
proc-marco = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "~0.3.60"
wasm-bindgen = "=0.2.92"
wasm-bindgen-cli = "~0.2.90"
wasm-bindgen-test = "~0.3.40"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "~0.3.60"
features = [
  'Node',
  'Window',
  'console',
  'Element',
  'Document',
  'HtmlElement',
  'WebGlShader',
  'WebGlBuffer',
  'WebGlProgram',
  'HtmlCanvasElement',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
]

[dev-dependencies]
wasm-bindgen-test = "~0.3.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
